--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
 	},
 	"homepage": "https://github.com/Matusola01/Extintores-SantaCruz#readme",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.0",
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
